// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CNavItem renders correctly 1`] = `
<li
  class="nav-item"
>
  <a
    class="nav-link"
    href="#"
    target="_self"
  />
</li>
`;

exports[`CNavItem renders correctly 2`] = `
<li
  class="nav-item"
>
  <a
    aria-disabled="true"
    class="nav-link disabled"
    href="#"
    tabindex="-1"
    target="_self"
  >
    CNavItem text
  </a>
</li>
`;
